--- a/style.css
+++ b/style.css
@@ -1,58 +1,19 @@
-body {
-    height: 100vh;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border-style: solid;
+    border-width: 1px;
 }
-.container {
-    background-color: #1F2937;
-    height: 30vh;
+
+.header-hero,
+.footer {
     display: flex;
-    flex: 1;
-    font-family: Roboto;
+    flex-direction: column;
+    background-color: #1F2937;
 }
 
 .header {
     display: flex;
-    flex: 1;
     justify-content: space-between;
-    margin: 50px;
-
-}
-
-.header-logo {
-    color: #F9FAF8;
-    font-size: 24px;
-}
-
-ul {
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    gap: 8px;
-    font-size: 18px;
-    color: #E5E7EB;
-
-}
-
-.hero {
-
-}
-
-.info {
-    height: 20vh;
-    
-}
-
-.quote {
-    background-color: #E5E7EB;
-    height: 20vh;
-    
-}
-
-.signup {
-    height: 20vh;
-}
-
-.footer {
-    background-color: #1F2937;
-    height: 10vh;
 }
