--- a/style.css
+++ b/style.css
@@ -1,19 +1,60 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    border-style: solid;
-    border-width: 1px;
+    font-family: Roboto;
 }
 
-.header-hero,
-.footer {
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    flex: 1 0 auto;
+}
+
+.header-hero {
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
+    padding-right: 200px;
+    padding-left: 200px;
+
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
+
+.header-logo {
+    display: flex;
+    flex: 1 1 0;
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.nav {
+    display: flex;
+    flex: 1 1 0;
+    font-size: 18px;
+    color: #e5e7eb;
+    justify-content: flex-end;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 16px;
+}
+
+.hero {
+    border-style: solid;
+    border-width: 1px;
+    display: flex;
+    justify-content: space-between;
+}
+
