--- a/style.css
+++ b/style.css
@@ -54,13 +54,16 @@ ul {
 .hero {
     display: flex;
     justify-content: space-between;
+    padding: 90px 10px;
 }
+
 .hero-left {
     display: flex;
     flex-direction: column;
     flex: 1 1 0;
-    border-style: solid;
-    border-width: 1px;
+    gap: 10px;
+    margin-right: 20px;
+    padding-right: 10px;
 }
 
 .hero-main {
@@ -75,15 +78,13 @@ ul {
 }
 
 .signup-btn {
-    width: 100px;
-    background: #3882f6;
-    border-radius: 8px;
-    height: 8px;
-    color: #e5e7eb;
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
+    align-self: flex-start;
+    padding: 5px 20px;
+    border-radius: 4px;
+    border: none;
+    background: #2882f6;
+    font-weight: bold;
+    color: #f9faf8;
 }
 
 .hero-right {
@@ -91,10 +92,8 @@ ul {
     flex: 1 1 0;
     justify-content: center;
     align-items: center;
-    border-style: solid;
-    border-width: 1px;
     color: white;
-    
-    
+    margin-left: 20px;
+    margin-bottom: 20px;
+    background: rgba(255, 255, 255, 0.5);
 }
-
