--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ ul {
 
 .signup-btn {
     align-self: flex-start;
-    padding: 5px 20px;
+    padding: 8px 25px;
     border-radius: 4px;
     border: none;
     background: #2882f6;
@@ -97,3 +97,34 @@ ul {
     margin-bottom: 20px;
     background: rgba(255, 255, 255, 0.5);
 }
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+}
+
+.info-section {
+    display: flex;
+    gap: 50px;
+    justify-content: space-between;
+
+}
+
+.info-box {
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.box {
+    width: 120px;
+    height: 120px;
+    border: 3px solid #2882f6;
+    border-radius: 8px;
+}
+
