--- a/style.css
+++ b/style.css
@@ -103,22 +103,27 @@ ul {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+}
+
+.info-header {
+    font-size: 28px;
+    font-weight: 900;
+    color: #1F2937;
+    margin: 25px 0;
 }
 
 .info-section {
     display: flex;
+    width: 100%;
     gap: 50px;
-    justify-content: space-between;
-
+    justify-content: center;
 }
 
 .info-box {
-    border: 2px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
+    width: 140px;
 }
 
 .box {
@@ -126,5 +131,14 @@ ul {
     height: 120px;
     border: 3px solid #2882f6;
     border-radius: 8px;
+} 
+
+.info-text {
+    text-align: center;
+    color: gray;
+    font-size: 15px;
 }
+
+
+
 
