--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -77,12 +77,13 @@ ul {
     color: #e5e7eb;
 }
 
-.signup-btn {
+.signup-btn,
+.signup-btn2 {
     align-self: flex-start;
     padding: 8px 25px;
     border-radius: 4px;
     border: none;
-    background: #2882f6;
+    background: #3882f6;
     font-weight: bold;
     color: #f9faf8;
 }
@@ -104,6 +105,8 @@ ul {
     justify-content: center;
     align-items: center;
     margin-bottom: 90px;
+    padding-right: 200px;
+    padding-left: 200px;
 }
 
 .info-header {
@@ -130,8 +133,9 @@ ul {
 .box {
     width: 120px;
     height: 120px;
-    border: 3px solid #2882f6;
+    border: 3px solid #3882f6;
     border-radius: 8px;
+    margin-bottom: 5px;
 } 
 
 .info-text {
@@ -145,14 +149,60 @@ ul {
     flex-direction: column;
     align-items: center;
     background: #e5e7eb;
-    color: #1F2937;    
+    color: #1F2937;
+    padding-right: 200px;
+    padding-left: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    flex-wrap: wrap;
 }
 
 .quote {
-    font-family: 'Inter', sans-serif;
+    font-size: 36px;
     font-style: italic;
     font-weight: 300;
-    font-size: 36px;
+    color: #1F2937;
+    margin-bottom: 10px;
+}
+
+.author {
+    font-size: 20px;
+    align-self: flex-end;
+    padding-right: 150px;
+    font-weight: 700;
+    font-style: italic;
+}
+
+.call2act-section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+}
+
+.call2act {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 80px;
+    padding: 30px 80px;
+    border-radius: 9px;
+}
+
+.call2act-textsection {
+    flex-direction: column;
+    width: min-content;
+    flex: 1;
+}
+
+.signup-btn2 {
+    border: 2px solid white;
+    align-self: center;
+    
 }
 
 
